variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:2: error: illegal start of simple pattern
var case=0
    ^RunHalf:8: error: '=' expected but '}' found.
	}
        ^